Fix blurry images in Safari, and progress bars in safari

--- a/web/src/components/services/services.module.css
+++ b/web/src/components/services/services.module.css
@@ -124,7 +124,10 @@ progress[value]::-webkit-progress-bar {
   background-color: #fff;
 }
 
-progress[value]::-webkit-progress-value,
+progress[value]::-webkit-progress-value {
+  background-color: $accent-color;
+}
+
 progress[value]::-moz-progress-bar {
   background-color: $accent-color;
 }
